Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68376

Zoom in/out mouse cursor has wrong hotspot

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.11.1
    • 5.10.1, 5.11.0 RC2
    • WebEngine
    • None
    • Archlinux

      The zoom in/out cursor seems to have its hot spot at the bottom right corner rather than the center of the +/-, which can be seen by e.g. hovering over the image at https://imgur.com/gallery/M3jccc5

      I tried to debug this a bit by breaking in QtWebEngineCore::RenderWidgetHostViewQt::UpdateCursor - It gets a blink::WebCursorInfo::kTypeZoomOut type, calls ui::GetCursorBitmap and gets a 25x25px bitmap with the hotspot at 10/10px - however, when I screenshot and measure the cursor, it only gets displayed as 16x16px.

      https://bugs.chromium.org/p/chromium/issues/detail?id=436993 (and the workaround linked there) might be related too, though I see this without HighDPI scaling.

        1. cursor.png
          15 kB
          Florian Bruhin
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            juri.valdmann Jüri Valdmann (Inactive)
            the compiler Florian Bruhin
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes