Fix WebCursor scaling and hotspot

Old behavior:

  - Hotspot always chosen according to 2x devicePixelRatio.
  - Image always chosen according to 1x devicePixelRatio.

New behavior:

  - Use actual devicePixelRatio.

Task-number: QTBUG-68376
Change-Id: I6eef12a7dcf7fde7f8f488d9f2cba99f21e73cc2
Reviewed-by: Michal Klocek <michal.klocek@qt.io>